--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Form</title>
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,700&display=swap" rel="stylesheet">
+
+    <title>New Project</title>
 </head>
 <body>
-    
+  <section class="display">
+    <div>
+        <h1>Welcom to</h1> 
+       <h1><span class="orang-color">peter parker</span> World</h1>
+       <h3>Build climber and train stopper</h3>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit cum cumque, voluptate quis nobis consequuntur sed cupiditate officia at itaque.</p>
+       <a class="lint-bottom" target="_blank" href="https://www.facebook.com/bghomadote?mibextid=ZbWKwL">HIRE ME</a>
+
+       </div>
+       <div class="image">
+        <img src="JAFOR.png" width="100%">
+       </div>    
+  </section>
+
 </body>
 </html>
